Fixed issues with UC svg on mobile devices

--- a/src/styles/companies.module.css
+++ b/src/styles/companies.module.css
@@ -15,7 +15,7 @@
 
 .companies > div {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+  grid-template-columns: 1fr;
   grid-gap: 10vw;
 }
 
@@ -28,7 +28,8 @@
 .companies img {
   width: 100%;
   height: auto;
-  max-height: 80px;
+  max-width: 30vw;
+  max-height: 50px;
 }
 
 @media all and (min-width: 768px) {
@@ -37,10 +38,11 @@
   }
 
   .companies > div {
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
     grid-gap: 5vw;
   }
 
   .companies img {
-    max-width: 60vw;
+    max-width: none;
   }
 }
